# aerarium

./: .env.example  .gitignore  NOTICE  README.md  instrumentation.ts  jest-dom.d.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
app/: aerarium-app.css  aerarium-landing.css  aerarium-tokens.css  aerarium.css  chain-config-gate.tsx  globals.css  layout.tsx  page.tsx  providers-evm.tsx  providers-solana.tsx  providers.tsx
components/: ActionModal.tsx  ActivityFeed.tsx  AllReservesTable.tsx  AssetsToBorrowTable.tsx  AssetsToSupplyTable.tsx  CompoundPortal.tsx  HealthFactorPill.tsx  HistoryEventList.tsx  HistoryFilterRow.tsx  LiquidateFilterRow.tsx  MarketStatStrip.tsx  PageFooter.tsx  PageHeader.tsx  PositionCardRow.tsx  PositionsRow.tsx  ThemeToggle.tsx  YourBorrowsTable.tsx  YourSuppliesTable.tsx  icons.tsx
design/: Aerarium - Brand Kit.html  Aerarium - Landing.html  Aerarium - Section Template.html  Compound on Rome v1.html  aer-app.jsx  aer-arena.jsx  aer-brand.jsx  aer-brandkit.jsx  aer-data.jsx  aer-sections.jsx  aer-sections2.jsx  aer-template.jsx  app-v1.jsx  app.jsx  colors_and_type.css  evm-lane.jsx  lib.jsx  solana-lane-v1.jsx  solana-lane.jsx
docs/: DESIGNER-BRIEF-aerarium.md  DESIGNER-PROMPT-aerarium-connected.md  DESIGNER-PROMPT-aerarium.md  INTEGRATION.md  mockup-landing-aerarium.html
hooks/: useTheme.ts
lib/: config.ts  discoveryAssets.ts  discoveryGate.ts  env-context.tsx  env.ts  explorer.ts  flowsGate.ts  gas.ts  lastLane.ts  mock-wallet.ts  romeRpc.ts  solanaRpc.ts  wagmi.ts
programs/alt-registry/: Cargo.toml
programs/alt-registry/scripts/: live-fold-create.mjs  live-set-alt.mjs
programs/alt-registry/src/: lib.rs
programs/alt-registry/tests/: set_alt.rs
programs/native-faucet/: Cargo.toml
programs/native-faucet/src/: lib.rs
public/: theme-init.js
scripts/: _chain.mjs  build-compound-config.ts  check-bundle-no-localhost.sh  check-no-committed-secrets.ts  (+9 more)
(+293 files in other folders)
